Adds homepage,css styling,images

--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <html>
   <head>
-    <title>Brand New Schools</title>
+    <title>Chief Chef</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <body>
-      <h1>Welcome to Brand New Schools</h1>
-    </body>
+      <div class="wrapper">
+        <div class="container">
+          <div class="heading">
+            <h1>Chief Chef online services</h1>
+            <marquee><h2>Where Your Taste is Satisfied</h2></marquee>
+            </div>
+          <div class="nav">
+            <ul>
+              <li><a href="#">Home</a> </li>
+              <li><a href="#">Meals &amp; Recipes</a> </li>
+              <li><a href="#">Book Now</a> </li>
+              <li><a href="#">Chefs</a> </li>
+              <li><a href="#">Contact us</a> </li>
+            </ul>
+          </div>
+        </div>
+        </div>
+      </div>
+      <section id="Meals" class="meals">
+        <div class="container">
+          <div class="heading">
+            <h1>Learn How we provide you with quality ingredients and nutrition<h1>
+            <div class="slide">
+              <p><img src="images/chicken.jpg" alt="">This is Your ultimate Comfort <p>
+                <p><img src="images/omellate.jpg" alt="">Three meals a day Three doctors away </p>
+            </div>
+          </div>
 
+        </div>
+      </section>
+    </body>
   </head>
 </html>
