Adds style to menu,images and p

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           <div class="heading">
             <h1>Learn How we provide you with quality ingredients and nutrition<h1>
             <div class="slide">
-              <p><img src="images/chicken.jpg" alt="">This is Your ultimate Comfort <p>
-                <p><img src="images/omellate.jpg" alt="">Three meals a day Three doctors away </p>
+              <p><img src="images/chef.jpg" class="meals1" alt="">This is Your ultimate Comfort <p>
+                <p><img src="images/omlete.jpg" class="meals2"alt="">Three meals a day Three doctors away </p>
+                <p><img src="images/chicken.jpg" class="meals2" alt=""> </p>
             </div>
           </div>
 
