Adds styling and more recipes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             </div>
           <div class="nav">
             <ul>
-              <li><a href="#">Home</a> </li>
-              <li><a href="#">Meals &amp; Recipes</a> </li>
+              <li><a href="#home">Home</a> </li>
+              <li><a href="#meals">Meals &amp; Recipes</a> </li>
               <li><a href="#">Book Now</a> </li>
               <li><a href="#">Chefs</a> </li>
               <li><a href="#">Contact us</a> </li>
@@ -21,19 +21,29 @@
         </div>
         </div>
       </div>
-      <section id="Meals" class="meals">
+      <div id="Home" class="meals">
         <div class="container">
           <div class="heading">
-            <h1>Learn How we provide you with quality ingredients and nutrition<h1>
+
             <div class="slide">
               <p><img src="images/chef.jpg" class="meals1" alt="">This is Your ultimate Comfort <p>
                 <p><img src="images/omlete.jpg" class="meals2"alt="">Three meals a day Three doctors away </p>
                 <p><img src="images/chicken.jpg" class="meals2" alt=""> </p>
             </div>
           </div>
-
         </div>
+        </div>
+      </div>
+      <section class="Recipes" id="meals">
+        <h1>Learn How we provide you with quality ingredients and nutrition<h1>
+          <h1>Cake Recipe</h1>
+          <div class="Recipe">
+            <p><img class="slide3" src="images/recipe.jpg" alt=""> </P>
+              <p><img class="slide3" src="images/recipe1.jpg" alt=""> </p>
+              <p><img class="slide3" src="images/recipe2.jpg" alt=""> </p>
+
+          </div>
       </section>
-    </body>
+        </body>
   </head>
 </html>
